[package]
name = "cmt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bincode = "2.0.0-rc.3"
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
ctrlc = "3.4.0"
regex = "1.9.1"
rustyline = "12.0.0"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"

